Menu for donators

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/androidsRus-douglas
 excludes=
+file.reference.commons-lang3-3.9-sources.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-sources.jar
+file.reference.commons-lang3-3.9-test-sources.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-test-sources.jar
+file.reference.commons-lang3-3.9-tests.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-tests.jar
+file.reference.commons-lang3-3.9.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang3-3.9.jar}:\
+    ${file.reference.commons-lang3-3.9-sources.jar}:\
+    ${file.reference.commons-lang3-3.9-test-sources.jar}:\
+    ${file.reference.commons-lang3-3.9-tests.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,13 +62,13 @@ javac.test.modulepath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
