--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=androidsRus-douglas
+application.vendor=hal-9000
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,18 +33,15 @@ dist.jar=${dist.dir}/androidsRus-douglas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/androidsRus-douglas
+endorsed.classpath=
 excludes=
-file.reference.commons-lang3-3.9-sources.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-sources.jar
-file.reference.commons-lang3-3.9-test-sources.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-test-sources.jar
-file.reference.commons-lang3-3.9-tests.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9-tests.jar
-file.reference.commons-lang3-3.9.jar=/Users/hal-9000/Downloads/commons-lang3-3.9/commons-lang3-3.9.jar
+file.reference.commons-lang3-3.9-sources.jar=/Users/hal-9000/Downloads/commons-lang3-3.9-sources.jar
+file.reference.commons-lang3-3.9.jar-1=/Users/hal-9000/Downloads/commons-lang3-3.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.9.jar}:\
-    ${file.reference.commons-lang3-3.9-sources.jar}:\
-    ${file.reference.commons-lang3-3.9-test-sources.jar}:\
-    ${file.reference.commons-lang3-3.9-tests.jar}
+    ${file.reference.commons-lang3-3.9.jar-1}:\
+    ${file.reference.commons-lang3-3.9-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
